# glsl-practice

./: CMakeLists.txt  main.cpp  shader.frag
